force-app/main/default/objects/pse__Expense__c/fields/pse__Override_Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Overrides the Group to which the Expense Transactions will roll up for Group Actuals, even if the Project is in a different Group. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Group based on &apos;follows&apos; rules. Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
    <inlineHelpText>Overrides the Group to which the Expense Transactions will roll up for Group Actuals, even if the Project is in a different Group. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Group based on &apos;follows&apos; rules.</inlineHelpText>
    <label>Override Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>Override Group For Expenses</relationshipLabel>
    <relationshipName>Override_Group_For_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>