force-app/main/default/objects/pse__Expense__c/fields/pse__Reimbursement_Amount_In_Project_Currency__c.field-meta.xml
<CustomField>
    <fullName>pse__Reimbursement_Amount_In_Project_Currency__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This field stores a numeric value for the Reimbursement Amount converted to the Project (billing) currency using system (not overridden) rates, for later use in vendor invoicing.</description>
    <inlineHelpText>This field stores a numeric value for the Reimbursement Amount converted to the Project (billing) currency using system (not overridden) rates, for later use in vendor invoicing.</inlineHelpText>
    <label>Reimbursement Amount In Project Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>