force-app/main/default/objects/pse__Expense__c/validationRules/pse__Expense_Line_Report_Fixed_If_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Expense_Line_Report_Fixed_If_Submitted</fullName>
    <active>true</active>
    <description>An Expense Line&apos;s Expense Report may not be changed if it is submitted or included in financials.</description>
    <errorConditionFormula>AND(ISCHANGED(pse__Expense_Report__c),OR(pse__Submitted__c,pse__Include_In_Financials__c))</errorConditionFormula>
    <errorDisplayField>pse__Expense_Report__c</errorDisplayField>
    <errorMessage>An Expense Line&apos;s Expense Report may not be changed if it is submitted or included in financials.</errorMessage>
</ValidationRule>