force-app/main/default/objects/pse__Expense__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Expense_Report__c</columns>
    <columns>pse__Expense_Date__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Billable__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Assignment__c</columns>
    <columns>pse__Amount__c</columns>
    <columns>pse__Billing_Amount__c</columns>
    <columns>pse__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>