force-app/main/default/objects/pse__Expense__c/listViews/pse__Mobile_My_Expenses.listView-meta.xml
<ListView>
    <fullName>pse__Mobile_My_Expenses</fullName>
    <columns>pse__Project__c</columns>
    <columns>pse__Type__c</columns>
    <columns>pse__Amount__c</columns>
    <columns>pse__Expense_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mobile: My Expenses</label>
    <language>en_US</language>
</ListView>